--- a/.env
+++ b/.env
@@ -11,3 +11,12 @@ DB_PORT=5432
 
 
 CORS_ALLOWED_ORIGIN=http://localhost:5173
+
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=abhishek234264@gmail.com
+EMAIL_HOST_PASSWORD=hetzdoydyemqqbsb
+EMAIL_USE_TLS=True
+
